# gaia-eigenlayer-avs-blueprint

./: .gitmodules  Cargo.toml  Dockerfile  README.md  remappings.txt
contracts/src/: GaiaNodeManager.sol  IGaiaNodeManager.sol  TangleServiceManager.sol
src/: main.rs
tests/: e2e.rs
