[package]
name = "eigenlayer-gaiai-template"
version = "0.1.0"
edition = "2021"
description = "A template for setting up Gaia on EigenLayer testnet"
authors = ["Han <phamhan@uw.edu>"]
license = "MIT OR Apache-2.0"
homepage = "."
repository = "https://github.com/hanpham32/eigenlayer-gaiai-template"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", features = ["tangle", "macros"] }

[build-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", features = ["build"] }

[dev-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", features = ["testing", "tangle"] }
color-eyre = "0.6.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "eigenlayer-gaiai-template"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "HelloBlueprint" }

[[package.metadata.gadget.Native.sources]]
owner = "hanpham32"
repo = "eigenlayer-gaiai-template"
tag = "0.1.0"
binaries = [
    { arch = "Amd64", os = "Linux", name = "amd64-linux-eigenlayer-gaiai-template-gadget" },
    { arch = "Arm64", os = "Linux", name = "arm64-linux-eigenlayer-gaiai-template-gadget" },
]
